--- a/gobernador.html
+++ b/gobernador.html
@@ -6,7 +6,7 @@
     <title> GOBERNAOR DE LA PROVINCIA</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
-<body>
+<body class="body-comun" >
     
     <h1> GOBERNADOR DE LA PROVINCIA</h1>
 
@@ -24,6 +24,7 @@
     <ol class="etiqueta">
         
        <li><a href="index.html"> ir a index</a> </li>
+       <li> <a href="capital.html"> ir a capital</a></li>
     </ol>
 
 
