--- a/historia.html
+++ b/historia.html
@@ -6,7 +6,7 @@
     <title>La Historia de Misiones</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
-<body>
+<body class="body-comun">
    
         <h1> HISTORIA DE MISIONES</h1>
         
@@ -29,6 +29,7 @@
 
     <ol class="etiqueta">
             <li>    <a href="index.html" > ir a index></a> </li>
+            <li> <a href="gobernador.html"> ir a gobernador</a></li>
     </ol>
 
     
